<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditContacts">

    <Button
        android:id="@+id/PersonSetPicButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/setPicButton"
        app:backgroundTint="#4CAF50"/>

    <ImageView
        android:id="@+id/PersonImageEdit"
        android:layout_width="183dp"
        android:layout_height="154dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/rememberedPersonImg"
        app:layout_constraintEnd_toStartOf="@+id/PersonSetPicButton"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_gallery"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/avatars[0]"/>

    <EditText
        android:id="@+id/PersonEditName"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/nameMessage"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/PersonImageEdit"
        app:layout_constraintTop_toBottomOf="@+id/PersonImageEdit"/>

    <EditText
        android:id="@+id/PersonEditSurname"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/surnameMessage"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PersonEditName"/>

    <EditText
        android:id="@+id/PersonEditRelationship"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/relationshipMessage"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PersonEditSurname"/>

    <EditText
        android:id="@+id/PersonEditPhone"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/phoneMessage"
        android:inputType="phone"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PersonEditRelationship"/>

    <TextView
        android:id="@+id/PersonFields"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/fieldMessage"
        android:inputType="none"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PersonEditPhone"/>

    <Button
        android:id="@+id/PersonSaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/saveButton"
        android:textSize="18sp"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionText"
        app:layout_constraintVertical_bias="0.664"/>

</androidx.constraintlayout.widget.ConstraintLayout>
